name:              bitlove-ui
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Astro
maintainer:        Astro
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://bitlove.org/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     BitloveAuth
                     PathPieces
                     Import
                     Model
                     Model.Query
                     Model.Item
                     Model.Download
                     Model.User
                     Model.Feed
                     Model.Token
                     Model.Tracker
                     Model.Session
                     Model.Stats
                     Model.ImageCache
                     Utils
                     Stats
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Auth
                     Handler.Browse
                     Handler.Directory
                     Handler.Edit
                     Handler.TorrentFile
                     Handler.TorrentStats
                     Handler.MapFeed
                     Handler.DownloadFeeds
                     Handler.ByEnclosureAPI
                     Handler.FeedLookupAPI
                     Handler.Tracker
                     Handler.Help
                     Handler.Widget
                     Handler.Thumbnails
                     Benc
                     WorkQueue

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes

    build-depends: base                          >= 4.6.0.1    && < 5
                 , yesod                         >= 1.2.2.1    && < 2
                 , yesod-core                    >= 1.2.4.3    && < 2
                 , yesod-auth                    >= 1.2.3      && < 2
                 , yesod-static                  >= 1.2.0.1    && < 2
                 , yesod-default                 >= 1.2.0      && < 2
                 , yesod-form                    >= 1.3.2.2    && < 2
                 , clientsession                 >= 0.9.0.3    && < 1
                 , bytestring                    >= 0.10.0.2   && < 1
                 , text                          >= 0.11.3.1   && < 1
                 , template-haskell              >= 2.8.0.0
                 , hamlet                        >= 1.1.7.2    && < 2
                 , shakespeare-css               >= 1.0.6.3    && < 2
                 , shakespeare-js                >= 1.2.0      && < 2
                 , shakespeare-text              >= 1.0.0.7    && < 2
                 , hjsmin                        >= 0.1.4.1    && < 1
                 , monad-control                 >= 0.3.2.1    && < 1
                 , wai-extra                     >= 1.3.4.5    && < 2
                 , yaml                          >= 0.8.5      && < 1
                 , http-conduit                  >= 1.9.5      && < 2
                 , directory                     >= 1.2.0.1    && < 2
                 , pool-conduit                  >= 0.1.2      && < 1
                 , HDBC                          >= 2.3.1.2    && < 3
                 , HDBC-postgresql               >= 2.3.2.1    && < 3
                 , resourcet                     >= 0.4.8      && < 1
                 , unordered-containers          >= 0.2.3.0    && < 1
                 , aeson                         >= 0.6.2.0    && < 1
                 , convertible                   >= 1.0.11.1   && < 3
                 , time                          >= 1.4.0.1    && < 3
                 , old-locale                    >= 1.0.0.5    && < 3
                 , containers                    >= 0.5.0.0    && < 1
                 , conduit                       >= 1.0.7.4    && < 2
                 , xml-conduit                   >= 1.1.0.5    && < 2
                 , xml-types                     >= 0.3.3      && < 1
                 , blaze-builder                 >= 0.3.1.1    && < 1
                 , blaze-markup                  >= 0.5.1.5    && < 1
                 , http-types                    >= 0.8.1      && < 1
                 , blaze-html                    >= 0.6.1.1    && < 1
                 , random                        >= 1.0.1.1    && < 2
                 , crypto-api                    >= 0.12.2.1   && < 1
                 , cryptohash                    >= 0.10.0     && < 1
                 , cryptohash-cryptoapi          >= 0.1.0      && < 1
                 , cereal                        >= 0.3.5.2    && < 1
                 , mtl                           >= 2.1.2      && < 3
                 , mime-mail                     >= 0.4.2.1    && < 1
                 , wai                           >= 1.4.0.2    && < 2
                 , network                       >= 2.4.1.2    && < 3
                 , cookie                        >= 0.4.0.1    && < 1
                 , data-default                  >= 0.4.0      && < 1
                 , stm                           >= 2.4.2      && < 3
                 , file-embed                    >= 0.0.4.6    && < 1
                 , process-conduit               >= 1.0.0.1    && < 2
                 , lifted-base                   >= 0.2.1.0    && < 1
                 , pcre-light                    >= 0.4        && < 1

executable         ui
    if flag(library-only)
        Buildable: False

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , bitlove-ui
                     , yesod-default
                     , yesod-core
                     , warp                  >= 1.3.9.2   && < 2
                     , warp-tls              >= 1.4.1.4   && < 2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , bitlove-ui
                 , yesod-default
                 , yesod-core
