name:              bitlove-ui
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Astro
maintainer:        Astro
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://bitlove.org/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     BitloveAuth
                     PathPieces
                     Import
                     Model
                     Model.SqlValue
                     Model.Query
                     Model.Item
                     Model.Download
                     Model.User
                     Model.Feed
                     Model.Token
                     Model.Tracker
                     Model.Session
                     Model.Stats
                     Model.ImageCache
                     Utils
                     Stats
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Auth
                     Handler.Browse
                     Handler.Directory
                     Handler.Edit
                     Handler.TorrentFile
                     Handler.TorrentStats
                     Handler.MapFeed
                     Handler.DownloadFeeds
                     Handler.ByEnclosureAPI
                     Handler.FeedLookupAPI
                     Handler.Help
                     Handler.Widget
                     Handler.Thumbnails
                     Tracker
                     Tracker.Foundation
                     Tracker.Utils
                     Tracker.Handler.HTTP
                     Tracker.Handler.Webtorrent
                     Benc
                     WorkQueue
                     Cache

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                ViewPatterns

    build-depends: base                          >= 4.6.0.1
                 , yesod                         >= 1.4
                 , yesod-core                    >= 1.4
                 , yesod-auth                    >= 1.4
                 , yesod-static                  >= 1.4
                 , yesod-form                    >= 1.4
                 , clientsession                 >= 0.9.0.3
                 , bytestring                    >= 0.10.0.2
                 , text                          >= 0.11.3.1
                 , template-haskell              >= 2.8.0.0
                 , hamlet                        >= 1.1.7.2
                 , shakespeare                   >= 1.0.0.0
                 , shakespeare-css               >= 1.0.6.3
                 , shakespeare-js                >= 1.2.0
                 , shakespeare-text              >= 1.0.0.7
                 , hjsmin                        >= 0.1.4.1
                 , monad-control                 >= 0.3.2.1
                 , wai-extra                     >= 3
                 , yaml                          >= 0.8.5
                 , http-conduit                  >= 1.9.5
                 , directory                     >= 1.2.0.1
                 , resource-pool                 >= 0.2.3
                 , postgresql-libpq              == 0.9.*
                 , postgresql-binary             >= 0.9.1.1 && < 0.10
                 , resourcet                     >= 0.4.8
                 , unordered-containers          >= 0.2.3.0
                 , aeson                         >= 0.6.2.0 && < 1.2
                 , convertible                   >= 1.0.11.1
                 , time                          >= 1.4.0.1
                 , old-locale                    >= 1.0.0.5
                 , containers                    >= 0.5.0.0
                 , conduit                       >= 1.0.7.4
                 , xml-conduit                   >= 1.1.0.5
                 , xml-types                     >= 0.3.3
                 , blaze-builder                 >= 0.3.1.1
                 , blaze-markup                  >= 0.5.1.5
                 , http-types                    >= 0.8.1
                 , blaze-html                    >= 0.6.1.1
                 , random                        >= 1.0.1.1
                 , crypto-api                    >= 0.12.2.1
                 , cryptohash                    >= 0.10.0
                 , cryptohash-cryptoapi          >= 0.1.0
                 , cereal                        >= 0.3.5.2
                 , mtl                           >= 2.1.2
                 , mime-mail                     >= 0.4.2.1
                 , wai                           >= 3
                 , network                       >= 2.4.1.2
                 , cookie                        >= 0.4.0.1
                 , data-default                  >= 0.4.0
                 , stm                           >= 2.4.2
                 , file-embed                    >= 0.0.4.6
                 , process-conduit               >= 1.0.0.1
                 , lifted-base                   >= 0.2.1.0
                 , regex-pcre                    >= 0.94.4
                 , memcache                      >= 0.2.0.1
                 , yesod-websockets

executable         ui
    if flag(library-only)
        Buildable: False

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , bitlove-ui
                     , yesod
                     , yesod-core
                     , warp                  >= 3
                     , warp-tls              >= 3
