name:              prittorrent-hui
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Astro
maintainer:        Astro
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://prittorrent-hui.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Browse

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0 -with-rtsopts=-N
    else
        ghc-options:   -Wall -threaded -O2 -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                >= 1.0        && < 1.1
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-test                    >= 0.2        && < 0.3
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3
                 , pool-conduit                  >= 0.1.0.2    && < 0.2
                 , HDBC                          >= 2.3.1.1    && < 2.4
                 , HDBC-postgresql               >= 2.3.2.1    && < 2.4
                 , resourcet                     >= 0.3.2.1    && < 0.4
                 , unordered-containers          >= 0.2.1.0    && < 0.3
                 , aeson                         >= 0.6.0.2    && < 0.7
                 , convertible                   >= 1.0.11.0   && < 1.1
                 , time                          >= 1.4        && < 1.5
                 , old-locale                    >= 1.0.0.4    && < 1.1

executable         prittorrent-hui
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , prittorrent-hui
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , prittorrent-hui
                 , yesod-test
                 , yesod-default
                 , yesod-core
